# slack-mcp-client

./: .env.example  LICENSE  README.md  agent.py  langfuse_common.py  main.py  mcp-servers.json  mcp_app.py  pyproject.toml  requirements.txt  slack.py  slack_app.py
